crates/service/tests/code_action/snapshots/features__code_action__clean_no_types__param.snap
---
source: crates/service/tests/code_action/clean_no_types.rs
expression: response
---
[
  {
    "title": "Remove empty param",
    "kind": "refactor",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 8
              },
              "end": {
                "line": 2,
                "character": 16
              }
            },
            "newText": ""
          }
        ]
      }
    }
  }
]
