crates/service/tests/code_action/snapshots/features__code_action__clean_no_types__result.snap
---
source: crates/service/tests/code_action/clean_no_types.rs
expression: response
---
[
  {
    "title": "Remove empty result",
    "kind": "refactor",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 8
              },
              "end": {
                "line": 2,
                "character": 21
              }
            },
            "newText": ""
          }
        ]
      }
    }
  }
]
